style: add overflow fix to pre

--- a/site/base.css
+++ b/site/base.css
@@ -17,6 +17,10 @@ body {
     padding: 13px;
 }
 
+img {
+    max-width: 38em;
+}
+
 a {
     color: #38664C;
     text-decoration-line: none;
@@ -54,13 +58,20 @@ pre {
     border-radius: .5em;
     padding: .5em;
     background-color: #D9DFD3;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+pre::-webkit-scrollbar {
+    display: none;
 }
 
 p code {
     border: 1px solid #13221C;
     border-radius: .3em;
     padding: 0 .3em;
-    background-color: #D9DFD3;
+    background-color: rgba(217, 223, 211, .6);;
 }
 
 blockquote {
@@ -68,6 +79,8 @@ blockquote {
     border-left-style: solid;
     border-left-width: 5px;
     padding-left: 1em;
+    padding-top: .2em;
+    background-color: rgba(217, 223, 211, .6);
 }
 
 ul li {
